fix layout; remove padding from body for improved spacing

--- a/style.css
+++ b/style.css
@@ -171,7 +171,6 @@ body
     max-width:700px;
     gap:500px;
     min-height:auto;
-    padding:100px
 }
 .branch
 {
